methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: Missing closing brace `}' assumed here
var vuBiscuit:Booleean =true
^MethodsReturning:1: error: expected class or object definition
var vuBiscuit:Booleean =true
^MethodsReturning:7: error: expected class or object definition
def haveBaggle():Boolean = {
^